# Lab-Device-Controller

./: .gitignore  README.md  main.py  pyproject.toml  requirement.txt  requirements.txt  visa_manager.py
instruments/: laser.py
lab_cli/: debug.py  debug_cryostat..py  debug_cryostat.py  debug_laser.py  equipment_api.py  experiment_registry.py  main.py  models.py
lab_cli/actions/: __init__.py  cryo_actions.py  general_actions.py  laser_actions.py
lab_cli/connections/: cryostat.py  laser.py  oscillator.py  oscilloscope.py
lab_cli/read_only/: dsox2024a_python_example_manual.py  tls570_python_example.py
lab_cli/read_only/Python Montana examples/: pegasus_cooldown.py  rook_move_2d.py  rook_move_axis.py  rook_raster_scan.py
lab_cli/read_only/Python Montana examples/libs/: cryocore.py  genericcryostat.py  instrument.py  rook.py  scryostation.py
src/main/: __main__.py  greet.py
